--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap • Cyberpunk UI</title>
+    <title>Rose Digital Imaging</title>
     <!-- Bootstrap 5.3.8 CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -163,7 +163,7 @@
           <div class="carousel-item active">
             <!-- You can replace this placeholder with your own image -->
             <img
-              src="https://placehold.co/700x500/333/FFF?text=Logos"
+              src="./images/logos/Carousel.jpg"
               class="d-block w-100"
               alt="Logo design showcase"
             />
@@ -175,12 +175,12 @@
           <div class="carousel-item">
             <!-- You can replace this placeholder with your own image -->
             <img
-              src="https://placehold.co/700x500/555/FFF?text=Photography"
+              src="./images/Photography/photographycara.jpg"
               class="d-block w-100"
               alt="Professional photography examples"
             />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Professional Photography</h5>
+              <h5 class="caratext">Professional Photography</h5>
               <a href="./photography.html" class="btn btn-primary"
                 >See Gallery</a
               >
@@ -189,12 +189,12 @@
           <div class="carousel-item">
             <!-- You can replace this placeholder with your own image -->
             <img
-              src="https://placehold.co/700x500/777/FFF?text=Advertisements"
+              src="./images/Advertisements/advertisementcara.jpg"
               class="d-block w-100"
               alt="Advertisement design samples"
             />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Impactful Advertisements</h5>
+              <h5 class="caratext">Impactful Advertisements</h5>
               <a href="./advertisement.html" class="btn btn-primary"
                 >Explore Designs</a
               >
