Home page almost Complete

--- a/index.html
+++ b/index.html
@@ -33,15 +33,8 @@
         );
       })();
     </script>
-    <style>
-      .portfolio-carousel {
-        max-width: 700px;
-        max-height: 500px;
-        margin: 2rem auto; /* Adds some space and centers the carousel */
-      }
-    </style>
   </head>
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="./index.html">Rose Digital Imaging</a>
@@ -202,7 +195,110 @@
           </div>
         </div>
       </div>
+      <div class="my-5">
+        <h2 class="Title">A Little About Us</h2>
+        <div class="row align-items-center mt-4">
+          <div class="col-md-4 text-center">
+            <img
+              class="profile img-fluid"
+              src="./images/pinkbengit.jpg"
+              alt="A picture of Benjamin Rose"
+            />
+          </div>
+          <div class="col-md-8">
+            <p class="lead mt-3 mt-md-0">
+              Hi, I'm Benjamin Rose, the creative force behind Rose Digital
+              Imaging. For me, creation is a language that speaks through every
+              medium. It's the thrill of capturing a perfect moment through a
+              camera lens, the satisfaction of crafting a logo that tells a
+              brand's entire story, and the challenge of building a beautiful
+              website from a single line of code. My passion lies at the
+              intersection of art and technology, where visual storytelling
+              meets powerful full-stack development. Whether it's through
+              impactful advertisements, elegant photography, or robust software,
+              my mission is to transform your vision into a digital reality that
+              captivates and inspires.
+            </p>
+            <p class="lead mt-3 mt-md-0">
+              Feel free to browse around and admire the work I have to offer and
+              if you have any inquires about a project you might need help with
+              you can always head over to the
+              <a href="./contactme.html">Contact Me</a> page.
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- Proficient In Section -->
+      <div class="my-5">
+        <h2 class="Title">Proficient In</h2>
+        <div class="row mt-4 justify-content-center">
+          <div class="col-md-6 col-lg-4 mb-4 text-center">
+            <h4 class="subs">Photography & Editing</h4>
+            <img
+              class="bubble mb-3"
+              src="./images/Camera.jpg"
+              alt="Camera icon"
+            />
+            <p>
+              Every photo tells a story waiting to be unveiled. Through the
+              lens, I capture the fleeting moments of life, and in the editing
+              suite, I refine them into art. It's a dance between light and
+              shadow, color and emotion, where I meticulously enhance each image
+              to bring its true narrative to life.
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-4 text-center">
+            <h4 class="subs">Logo & Brand Design</h4>
+            <img
+              class="bubble mb-3"
+              src="./images/design.jpg"
+              alt="Design tools icon"
+            />
+            <p>
+              A great design is more than just aesthetics; it's the silent
+              ambassador of your brand. I specialize in creating memorable logos
+              and compelling advertisements that not only look beautiful but
+              also communicate a clear message. By blending creativity with
+              strategy, I design visual identities that resonate with your
+              audience and leave a lasting impression.
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-4 text-center">
+            <h4 class="subs">Full-Stack Development</h4>
+            <img
+              class="bubble mb-3"
+              src="./images/FullStack.jpg"
+              alt="Code on a screen icon"
+            />
+            <p>
+              From a simple idea to a fully functional application, I architect
+              and build digital experiences from the ground up. Mastering both
+              front-end and back-end technologies, I write clean, efficient code
+              to create seamless, scalable, and secure websites and software.
+            </p>
+          </div>
+        </div>
+      </div>
     </main>
+    <!-- Footer -->
+    <footer class="site-footer mt-auto py-4">
+      <div class="container text-center">
+        <div class="mb-3">
+          <a href="https://github.com/benjaminrosesr-tech" class="social-icon" aria-label="GitHub"
+            ><i class="bi bi-github"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/benjamin-rose-9019aa69/" class="social-icon" aria-label="LinkedIn"
+            ><i class="bi bi-linkedin"></i
+          ></a>
+          <a href="https://www.facebook.com/RoseDigitalDesign" class="social-icon" aria-label="Facebook"
+            ><i class="bi bi-facebook"></i
+          ></a>
+        </div>
+        <p class="mb-0">
+          &copy; 2025 Rose Digital Imaging. All Rights Reserved.
+        </p>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <script>
       // Theme switcher logic
