--- a/contactme.html
+++ b/contactme.html
@@ -34,7 +34,7 @@
       })();
     </script>
   </head>
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="./index.html">Rose Digital Imaging</a>
@@ -123,7 +123,129 @@
         </div>
       </div>
     </nav>
-    <main class="container mt-4"><h1>Contact Us</h1></main>
+    <main class="container mt-4 flex-shrink-0">
+      <div class="row justify-content-center">
+        <div class="col-lg-8">
+          <h1 class="Title">Let's Create Together</h1>
+          <p class="text-center lead mb-4">
+            Have a project in mind or just want to say hello? Fill out the form
+            below and I'll get back to you as soon as possible.
+          </p>
+
+          <!-- IMPORTANT: Replace the action URL with your own from Formspree.io -->
+          <form
+            action="https://formspree.io/f/xjkangae"
+            method="POST"
+          >
+            <!-- This hidden input tells Formspree where to redirect after submission -->
+            <input
+              type="hidden"
+              name="_next"
+              value="https://your-domain.com/success.html"
+            />
+            <div class="row">
+              <div class="col-md-6 mb-3">
+                <label for="firstName" class="form-label">First Name</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="firstName"
+                  name="firstName"
+                  required
+                />
+              </div>
+              <div class="col-md-6 mb-3">
+                <label for="lastName" class="form-label">Last Name</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="lastName"
+                  name="lastName"
+                  required
+                />
+              </div>
+            </div>
+            <div class="mb-3">
+              <label for="companyName" class="form-label"
+                >Company Name <span class="text-muted">(Optional)</span></label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="companyName"
+                name="companyName"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email Address</label>
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                name="email"
+                placeholder="you@example.com"
+                required
+              />
+            </div>
+            <div class="mb-3">
+              <label for="phone" class="form-label">Phone Number</label>
+              <input
+                type="tel"
+                class="form-control"
+                id="phone"
+                name="phone"
+                placeholder="123-456-7890"
+                required
+              />
+            </div>
+            <div class="mb-3">
+              <label for="projectIdea" class="form-label">Project Idea</label>
+              <textarea
+                class="form-control"
+                id="projectIdea"
+                name="projectIdea"
+                rows="5"
+                placeholder="Tell me about your project..."
+                required
+              ></textarea>
+            </div>
+            <div class="text-center">
+              <button type="submit" class="btn btn-primary">
+                Send Message
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </main>
+    <!-- Footer -->
+    <footer class="site-footer mt-auto py-4">
+      <div class="container text-center">
+        <div class="mb-3">
+          <a
+            href="https://github.com/benjaminrosesr-tech"
+            class="social-icon"
+            aria-label="GitHub"
+            ><i class="bi bi-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/benjamin-rose-9019aa69/"
+            class="social-icon"
+            aria-label="LinkedIn"
+            ><i class="bi bi-linkedin"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/RoseDigitalDesign"
+            class="social-icon"
+            aria-label="Facebook"
+            ><i class="bi bi-facebook"></i
+          ></a>
+        </div>
+        <p class="mb-0">
+          &copy; 2025 Rose Digital Imaging. All Rights Reserved.
+        </p>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <script>
       // Theme switcher logic
