--- a/logo.html
+++ b/logo.html
@@ -34,7 +34,7 @@
       })();
     </script>
   </head>
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="./index.html">Rose Digital Imaging</a>
@@ -123,7 +123,37 @@
         </div>
       </div>
     </nav>
-    <main class="container mt-4"><h1>Our Logo Designs</h1></main>
+    <main class="container mt-4 flex-shrink-0">
+      <h1>Our Logo Designs</h1>
+    </main>
+    <!-- Footer -->
+    <footer class="site-footer mt-auto py-4">
+      <div class="container text-center">
+        <div class="mb-3">
+          <a
+            href="https://github.com/benjaminrosesr-tech"
+            class="social-icon"
+            aria-label="GitHub"
+            ><i class="bi bi-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/benjamin-rose-9019aa69/"
+            class="social-icon"
+            aria-label="LinkedIn"
+            ><i class="bi bi-linkedin"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/RoseDigitalDesign"
+            class="social-icon"
+            aria-label="Facebook"
+            ><i class="bi bi-facebook"></i
+          ></a>
+        </div>
+        <p class="mb-0">
+          &copy; 2025 Rose Digital Imaging. All Rights Reserved.
+        </p>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <script>
       // Theme switcher logic
