--- a/photography.html
+++ b/photography.html
@@ -34,143 +34,116 @@
       })();
     </script>
   </head>
-  <body>
-    <nav class="navbar navbar-expand-lg">
-      <div class="container">
-        <a class="navbar-brand" href="./index.html">Rose Digital Imaging</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#mainNav"
-          aria-controls="mainNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="mainNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./index.html"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./logo.html">Logos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="./photography.html"
-                >Photography</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./advertisement.html">Advertisements</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./contactme.html">Contact</a>
-            </li>
-            <li class="nav-item dropdown">
-              <button
-                class="btn btn-link nav-link py-2 px-0 px-lg-2 dropdown-toggle"
-                id="bd-theme"
-                type="button"
-                aria-expanded="false"
-                data-bs-toggle="dropdown"
-                aria-label="Toggle theme (auto)"
-              >
-                <i
-                  class="bi bi-sun-fill my-1 theme-icon-active"
-                  id="light-theme-icon"
-                ></i>
-                <i
-                  class="bi bi-moon-stars-fill my-1 theme-icon-active d-none"
-                  id="dark-theme-icon"
-                ></i>
-              </button>
-              <ul
-                class="dropdown-menu dropdown-menu-end"
-                aria-labelledby="bd-theme"
-              >
-                <li>
-                  <button
-                    type="button"
-                    class="dropdown-item d-flex align-items-center"
-                    data-bs-theme-value="light"
-                  >
-                    <i class="bi bi-sun-fill me-2"></i> Light
-                  </button>
-                </li>
-                <li>
-                  <button
-                    type="button"
-                    class="dropdown-item d-flex align-items-center"
-                    data-bs-theme-value="dark"
-                  >
-                    <i class="bi bi-moon-stars-fill me-2"></i> Dark
-                  </button>
-                </li>
-                <li>
-                  <button
-                    type="button"
-                    class="dropdown-item d-flex align-items-center"
-                    data-bs-theme-value="auto"
-                  >
-                    <i class="bi bi-circle-half me-2"></i> Auto
-                  </button>
-                </li>
-              </ul>
-            </li>
-          </ul>
+  <body class="d-flex flex-column min-vh-100">
+    <!-- Navbar will be loaded here -->
+    <div id="navbar-placeholder"></div>
+
+    <main class="container mt-4 flex-shrink-0">
+      <h1 class="Title">Our Photography</h1>
+      <p class="text-center lead mb-5">
+        Capturing moments, telling stories. Hover over an image to see more.
+      </p>
+
+      <div class="row g-4">
+        <!-- Create 8 of these blocks for your images -->
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="photo-item">
+            <img
+              src="./images/Photography/photo1.jpg"
+              alt="Description of photo 1"
+            />
+            <div class="photo-description">
+              <p>Image Description 1</p>
+            </div>
+          </div>
         </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="photo-item">
+            <img
+              src="./images/Photography/photo2.jpg"
+              alt="Description of photo 2"
+            />
+            <div class="photo-description">
+              <p>Image Description 2</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="photo-item">
+            <img
+              src="./images/Photography/photo3.jpg"
+              alt="Description of photo 3"
+            />
+            <div class="photo-description">
+              <p>Image Description 3</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="photo-item">
+            <img
+              src="./images/Photography/photo4.jpg"
+              alt="Description of photo 4"
+            />
+            <div class="photo-description">
+              <p>Image Description 4</p>
+            </div>
+          </div>
+        </div>
+              <div class="row g-4">
+        <!-- Create 8 of these blocks for your images -->
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="photo-item">
+            <img
+              src="./images/Photography/photo5.jpg"
+              alt="Description of photo 1"
+            />
+            <div class="photo-description">
+              <p>Image Description 1</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="photo-item">
+            <img
+              src="./images/Photography/photo6.jpg"
+              alt="Description of photo 2"
+            />
+            <div class="photo-description">
+              <p>Image Description 2</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="photo-item">
+            <img
+              src="./images/Photography/photo7.jpg"
+              alt="Description of photo 3"
+            />
+            <div class="photo-description">
+              <p>Image Description 3</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="photo-item">
+            <img
+              src="./images/Photography/photo8.jpg"
+              alt="Description of photo 4"
+            />
+            <div class="photo-description">
+              <p>Image Description 4</p>
+            </div>
+          </div>
+        </div>
+        <!-- Add 4 more blocks here for images 5-8 -->
       </div>
-    </nav>
-    <main class="container mt-4"><h1>Our Photography</h1></main>
+    </main>
+
+    <!-- Footer will be loaded here -->
+    <div id="footer-placeholder"></div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      // Theme switcher logic
-      document.addEventListener("DOMContentLoaded", () => {
-        const getStoredTheme = () => localStorage.getItem("theme");
-        const setStoredTheme = (theme) => localStorage.setItem("theme", theme);
-
-        const getPreferredTheme = () => {
-          const storedTheme = getStoredTheme();
-          if (storedTheme) return storedTheme;
-          return window.matchMedia("(prefers-color-scheme: dark)").matches
-            ? "dark"
-            : "light";
-        };
-
-        const setTheme = (theme) => {
-          if (
-            theme === "auto" &&
-            window.matchMedia("(prefers-color-scheme: dark)").matches
-          ) {
-            document.documentElement.setAttribute("data-bs-theme", "dark");
-          } else {
-            document.documentElement.setAttribute("data-bs-theme", theme);
-          }
-        };
-
-        setTheme(getPreferredTheme());
-
-        document.querySelectorAll("[data-bs-theme-value]").forEach((toggle) => {
-          toggle.addEventListener("click", () => {
-            const theme = toggle.getAttribute("data-bs-theme-value");
-            setStoredTheme(theme);
-            setTheme(theme);
-            // Update active icons
-            const isDark =
-              document.documentElement.getAttribute("data-bs-theme") === "dark";
-            document
-              .getElementById("light-theme-icon")
-              .classList.toggle("d-none", isDark);
-            document
-              .getElementById("dark-theme-icon")
-              .classList.toggle("d-none", !isDark);
-          });
-        });
-      });
-    </script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
