--- a/contactme.html
+++ b/contactme.html
@@ -133,10 +133,7 @@
           </p>
 
           <!-- IMPORTANT: Replace the action URL with your own from Formspree.io -->
-          <form
-            action="https://formspree.io/f/xjkangae"
-            method="POST"
-          >
+          <form action="https://formspree.io/f/xjkangae" method="POST">
             <!-- This hidden input tells Formspree where to redirect after submission -->
             <input
               type="hidden"
@@ -246,51 +243,11 @@
         </p>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      // Theme switcher logic
-      document.addEventListener("DOMContentLoaded", () => {
-        const getStoredTheme = () => localStorage.getItem("theme");
-        const setStoredTheme = (theme) => localStorage.setItem("theme", theme);
-
-        const getPreferredTheme = () => {
-          const storedTheme = getStoredTheme();
-          if (storedTheme) return storedTheme;
-          return window.matchMedia("(prefers-color-scheme: dark)").matches
-            ? "dark"
-            : "light";
-        };
-
-        const setTheme = (theme) => {
-          if (
-            theme === "auto" &&
-            window.match - media("(prefers-color-scheme: dark)").matches
-          ) {
-            document.documentElement.setAttribute("data-bs-theme", "dark");
-          } else {
-            document.documentElement.setAttribute("data-bs-theme", theme);
-          }
-        };
-
-        setTheme(getPreferredTheme());
-
-        document.querySelectorAll("[data-bs-theme-value]").forEach((toggle) => {
-          toggle.addEventListener("click", () => {
-            const theme = toggle.getAttribute("data-bs-theme-value");
-            setStoredTheme(theme);
-            setTheme(theme);
-            // Update active icons
-            const isDark =
-              document.documentElement.getAttribute("data-bs-theme") === "dark";
-            document
-              .getElementById("light-theme-icon")
-              .classList.toggle("d-none", isDark);
-            document
-              .getElementById("dark-theme-icon")
-              .classList.toggle("d-none", !isDark);
-          });
-        });
-      });
-    </script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-s2wqL3b2e/2Jz27gvyN/L4rL5JjA/3bU2/JdGf/gSHj/t2lG/S/s/d/3b"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
