--- a/index.html
+++ b/index.html
@@ -284,13 +284,22 @@
     <footer class="site-footer mt-auto py-4">
       <div class="container text-center">
         <div class="mb-3">
-          <a href="https://github.com/benjaminrosesr-tech" class="social-icon" aria-label="GitHub"
+          <a
+            href="https://github.com/benjaminrosesr-tech"
+            class="social-icon"
+            aria-label="GitHub"
             ><i class="bi bi-github"></i
           ></a>
-          <a href="https://www.linkedin.com/in/benjamin-rose-9019aa69/" class="social-icon" aria-label="LinkedIn"
+          <a
+            href="https://www.linkedin.com/in/benjamin-rose-9019aa69/"
+            class="social-icon"
+            aria-label="LinkedIn"
             ><i class="bi bi-linkedin"></i
           ></a>
-          <a href="https://www.facebook.com/RoseDigitalDesign" class="social-icon" aria-label="Facebook"
+          <a
+            href="https://www.facebook.com/RoseDigitalDesign"
+            class="social-icon"
+            aria-label="Facebook"
             ><i class="bi bi-facebook"></i
           ></a>
         </div>
@@ -299,51 +308,11 @@
         </p>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      // Theme switcher logic
-      document.addEventListener("DOMContentLoaded", () => {
-        const getStoredTheme = () => localStorage.getItem("theme");
-        const setStoredTheme = (theme) => localStorage.setItem("theme", theme);
-
-        const getPreferredTheme = () => {
-          const storedTheme = getStoredTheme();
-          if (storedTheme) return storedTheme;
-          return window.matchMedia("(prefers-color-scheme: dark)").matches
-            ? "dark"
-            : "light";
-        };
-
-        const setTheme = (theme) => {
-          if (
-            theme === "auto" &&
-            window.matchMedia("(prefers-color-scheme: dark)").matches
-          ) {
-            document.documentElement.setAttribute("data-bs-theme", "dark");
-          } else {
-            document.documentElement.setAttribute("data-bs-theme", theme);
-          }
-        };
-
-        setTheme(getPreferredTheme());
-
-        document.querySelectorAll("[data-bs-theme-value]").forEach((toggle) => {
-          toggle.addEventListener("click", () => {
-            const theme = toggle.getAttribute("data-bs-theme-value");
-            setStoredTheme(theme);
-            setTheme(theme);
-            // Update active icons
-            const isDark =
-              document.documentElement.getAttribute("data-bs-theme") === "dark";
-            document
-              .getElementById("light-theme-icon")
-              .classList.toggle("d-none", isDark);
-            document
-              .getElementById("dark-theme-icon")
-              .classList.toggle("d-none", !isDark);
-          });
-        });
-      });
-    </script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-s2wqL3b2e/2Jz27gvyN/L4rL5JjA/3bU2/JdGf/gSHj/t2lG/S/s/d/3b"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
