created a layout and finished the logos page

--- a/photography.html
+++ b/photography.html
@@ -249,8 +249,33 @@
         </div>
       </div>
     </main>
-
-    <!-- Footer will be loaded here -->
+<footer class="site-footer mt-auto py-4">
+      <div class="container text-center">
+        <div class="mb-3">
+          <a
+            href="https://github.com/benjaminrosesr-tech"
+            class="social-icon"
+            aria-label="GitHub"
+            ><i class="bi bi-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/benjamin-rose-9019aa69/"
+            class="social-icon"
+            aria-label="LinkedIn"
+            ><i class="bi bi-linkedin"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/RoseDigitalDesign"
+            class="social-icon"
+            aria-label="Facebook"
+            ><i class="bi bi-facebook"></i
+          ></a>
+        </div>
+        <p class="mb-0">
+          &copy; 2025 Rose Digital Imaging. All Rights Reserved.
+        </p>
+      </div>
+    </footer>
     <div id="footer-placeholder"></div>
 
     <script
