--- a/logo.html
+++ b/logo.html
@@ -124,7 +124,105 @@
       </div>
     </nav>
     <main class="container mt-4 flex-shrink-0">
-      <h1>Our Logo Designs</h1>
+      <h1 class="Title">Our Logo Designs</h1>
+      <p class="text-center lead mb-5">
+        A collection of logos designed for various clients and projects.
+      </p>
+
+      <div class="row g-4">
+        <!-- Logo 1 -->
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="logo-card">
+            <img
+              src="./images/logos/logo1.jpg"
+              class="img-fluid logo-image"
+              alt="pantheon of old logo"
+            />
+            <div class="logo-description">
+              <p>A gaming community Named "Pantheon of Old" was looking for an image expressing their intrest of fallen Sparten soldiers</p>
+            </div>
+          </div>
+        </div>
+        <!-- Logo 2 -->
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="logo-card">
+            <img
+              src="./images/logos/logo2.jpg"
+              class="img-fluid logo-image"
+              alt="Logo for Work Care Occupational health"
+            />
+            <div class="logo-description">
+              <p>Was tasked with depicting a logo for a rebranding of a doctors office that restructured their work to helping the working man</p>
+            </div>
+          </div>
+        </div>
+        <!-- Logo 3 -->
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="logo-card">
+            <img
+              src="./images/logos/logo3.jpg"
+              class="img-fluid logo-image"
+              alt="Telecommunications logo"
+            />
+            <div class="logo-description">
+              <p>A logo made for a fictional telecom company </p>
+            </div>
+          </div>
+        </div>
+        <!-- Logo 4 -->
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="logo-card">
+            <img
+              src="./images/logos/logo4.jpg"
+              class="img-fluid logo-image"
+              alt="Bad Lungs Record logo"
+            />
+            <div class="logo-description">
+              <p>A friends band in florida asked me to create an image that can be pressed onto their upcoming reocrd</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="logo-card">
+            <img
+              src="./images/logos/logo5.jpg"
+              class="img-fluid logo-image"
+              alt="Dyslektic Labs Logo"
+            />
+            <div class="logo-description"><p>Dyslektic Labs is a design brand that reached out to see what i could put together for their start up</p></div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="logo-card">
+            <img
+              src="./images/logos/logo6.jpg"
+              class="img-fluid logo-image"
+              alt="Benjamin Rose Branding"
+            />
+            <div class="logo-description"><p>Something clean modern and professional to use for an Insurance Agent</p></div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="logo-card">
+            <img
+              src="./images/logos/logo7.jpg"
+              class="img-fluid logo-image"
+              alt="Rose Digital Imaging Logo"
+            />
+            <div class="logo-description"><p>The design I came up with for Rose Digital Imaging</p></div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="logo-card">
+            <img
+              src="./images/logos/logo8.jpg"
+              class="img-fluid logo-image"
+              alt="Saphire Shine Logo"
+            />
+            <div class="logo-description"><p>Saphire Shine reached out and asked for a design to represent their auto detailing venture</p></div>
+          </div>
+        </div>
+      </div>
     </main>
     <!-- Footer -->
     <footer class="site-footer mt-auto py-4">
