--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="light">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
     <title>Rose Digital Imaging</title>
     <!-- Bootstrap 5.3.8 CSS -->
     <link
@@ -10,13 +10,13 @@
       rel="stylesheet"
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
+    >
+    <link rel="stylesheet" href="style.css" >
     <!-- Bootstrap Icons for theme switcher -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
+    >
     <script>
       // Prevents flash of unstyled content (FOUC)
       (() => {
@@ -124,77 +124,96 @@
       </div>
     </nav>
     <main class="container">
-      <div
-        id="portfolioCarousel"
-        class="carousel slide portfolio-carousel"
-        data-bs-ride="carousel"
-        data-bs-interval="3000"
-      >
-        <div class="carousel-indicators">
-          <button
-            type="button"
-            data-bs-target="#portfolioCarousel"
-            data-bs-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#portfolioCarousel"
-            data-bs-slide-to="1"
-            aria-label="Slide 2"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#portfolioCarousel"
-            data-bs-slide-to="2"
-            aria-label="Slide 3"
-          ></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <!-- You can replace this placeholder with your own image -->
-            <img
-              src="./images/logos/Carousel.jpg"
-              class="d-block w-100"
-              alt="Logo design showcase"
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Stunning Logo Designs</h5>
-              <a href="./logo.html" class="btn btn-primary">View Our Work</a>
-            </div>
+      <div class="portfolio-carousel">
+        <div
+          id="portfolioCarousel"
+          class="carousel slide"
+          data-bs-ride="carousel"
+          data-bs-interval="3000"
+        >
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#portfolioCarousel"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#portfolioCarousel"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#portfolioCarousel"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
           </div>
-          <div class="carousel-item">
-            <!-- You can replace this placeholder with your own image -->
-            <img
-              src="./images/Photography/photographycara.jpg"
-              class="d-block w-100"
-              alt="Professional photography examples"
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="caratext">Professional Photography</h5>
-              <a href="./photography.html" class="btn btn-primary"
-                >See Gallery</a
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <!-- You can replace this placeholder with your own image -->
+              <img
+                src="./images/logos/Carousel.jpg"
+                class="d-block w-100"
+                alt="Logo design showcase"
               >
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Stunning Logo Designs</h5>
+                <a href="./logo.html" class="btn btn-primary">View Our Work</a>
+              </div>
             </div>
-          </div>
-          <div class="carousel-item">
-            <!-- You can replace this placeholder with your own image -->
-            <img
-              src="./images/Advertisements/advertisementcara.jpg"
-              class="d-block w-100"
-              alt="Advertisement design samples"
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="caratext">Impactful Advertisements</h5>
-              <a href="./advertisement.html" class="btn btn-primary"
-                >Explore Designs</a
+            <div class="carousel-item">
+              <img
+                src="./images/Photography/photographycara.jpg"
+                class="d-block w-100"
+                alt="Professional photography examples"
               >
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="caratext">Professional Photography</h5>
+                <a href="./photography.html" class="btn btn-primary"
+                  >See Gallery</a
+                >
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="./images/Advertisements/advertisementcara.jpg"
+                class="d-block w-100"
+                alt="Advertisement design samples"
+              >
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="caratext">Impactful Advertisements</h5>
+                <a href="./advertisement.html" class="btn btn-primary"
+                  >Explore Designs</a
+                >
+              </div>
             </div>
           </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#portfolioCarousel"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#portfolioCarousel"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
       </div>
+
       <div class="my-5">
         <h2 class="Title">A Little About Us</h2>
         <div class="row align-items-center mt-4">
@@ -203,7 +222,7 @@
               class="profile img-fluid"
               src="./images/pinkbengit.jpg"
               alt="A picture of Benjamin Rose"
-            />
+            >
           </div>
           <div class="col-md-8">
             <p class="lead mt-3 mt-md-0">
@@ -238,7 +257,7 @@
               class="bubble mb-3"
               src="./images/Camera.jpg"
               alt="Camera icon"
-            />
+            >
             <p>
               Every photo tells a story waiting to be unveiled. Through the
               lens, I capture the fleeting moments of life, and in the editing
@@ -253,7 +272,7 @@
               class="bubble mb-3"
               src="./images/design.jpg"
               alt="Design tools icon"
-            />
+            >
             <p>
               A great design is more than just aesthetics; it's the silent
               ambassador of your brand. I specialize in creating memorable logos
@@ -269,7 +288,7 @@
               class="bubble mb-3"
               src="./images/FullStack.jpg"
               alt="Code on a screen icon"
-            />
+            >
             <p>
               From a simple idea to a fully functional application, I architect
               and build digital experiences from the ground up. Mastering both
