changed java script version

--- a/advertisement.html
+++ b/advertisement.html
@@ -295,11 +295,9 @@
         </p>
       </div>
     </footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-s2wqL3b2e/2Jz27gvyN/L4rL5JjA/3bU2/JdGf/gSHj/t2lG/S/s/d/3b"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" 
+    crossorigin="anonymous">
+    </script>
     <script src="js/main.js"></script>
   </body>
 </html>
