--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="light">
   <head>
-    <meta charset="utf-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1" >
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Rose Digital Imaging</title>
     <!-- Bootstrap 5.3.8 CSS -->
     <link
@@ -10,13 +10,13 @@
       rel="stylesheet"
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
-    >
-    <link rel="stylesheet" href="style.css" >
+    />
+    <link rel="stylesheet" href="style.css" />
     <!-- Bootstrap Icons for theme switcher -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    >
+    />
     <script>
       // Prevents flash of unstyled content (FOUC)
       (() => {
@@ -160,7 +160,7 @@
                 src="./images/logos/Carousel.jpg"
                 class="d-block w-100"
                 alt="Logo design showcase"
-              >
+              />
               <div class="carousel-caption d-none d-md-block">
                 <h5>Stunning Logo Designs</h5>
                 <a href="./logo.html" class="btn btn-primary">View Our Work</a>
@@ -171,7 +171,7 @@
                 src="./images/Photography/photographycara.jpg"
                 class="d-block w-100"
                 alt="Professional photography examples"
-              >
+              />
               <div class="carousel-caption d-none d-md-block">
                 <h5 class="caratext">Professional Photography</h5>
                 <a href="./photography.html" class="btn btn-primary"
@@ -184,7 +184,7 @@
                 src="./images/Advertisements/advertisementcara.jpg"
                 class="d-block w-100"
                 alt="Advertisement design samples"
-              >
+              />
               <div class="carousel-caption d-none d-md-block">
                 <h5 class="caratext">Impactful Advertisements</h5>
                 <a href="./advertisement.html" class="btn btn-primary"
@@ -222,7 +222,7 @@
               class="profile img-fluid"
               src="./images/pinkbengit.jpg"
               alt="A picture of Benjamin Rose"
-            >
+            />
           </div>
           <div class="col-md-8">
             <p class="lead mt-3 mt-md-0">
@@ -257,7 +257,7 @@
               class="bubble mb-3"
               src="./images/Camera.jpg"
               alt="Camera icon"
-            >
+            />
             <p>
               Every photo tells a story waiting to be unveiled. Through the
               lens, I capture the fleeting moments of life, and in the editing
@@ -272,7 +272,7 @@
               class="bubble mb-3"
               src="./images/design.jpg"
               alt="Design tools icon"
-            >
+            />
             <p>
               A great design is more than just aesthetics; it's the silent
               ambassador of your brand. I specialize in creating memorable logos
@@ -288,7 +288,7 @@
               class="bubble mb-3"
               src="./images/FullStack.jpg"
               alt="Code on a screen icon"
-            >
+            />
             <p>
               From a simple idea to a fully functional application, I architect
               and build digital experiences from the ground up. Mastering both
@@ -329,9 +329,10 @@
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-s2wqL3b2e/2Jz27gvyN/L4rL5JjA/3bU2/JdGf/gSHj/t2lG/S/s/d/3b"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
-    ></script>
+    >
+    </script>
     <script src="js/main.js"></script>
   </body>
 </html>
