--- a/photography.html
+++ b/photography.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="light">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
     <title>Photography</title>
     <!-- Bootstrap 5.3.8 CSS -->
     <link
@@ -10,13 +10,13 @@
       rel="stylesheet"
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
+    >
+    <link rel="stylesheet" href="style.css" >
     <!-- Bootstrap Icons for theme switcher -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
+    >
     <script>
       // Prevents flash of unstyled content (FOUC)
       (() => {
@@ -139,7 +139,7 @@
             <img
               src="./images/Photography/photo1.jpg"
               alt="Picture of boy Black and white"
-            />
+            >
             <div class="photo-description">
               <p>
                 Picture of a young boy staring off into the void thinking the
@@ -154,7 +154,7 @@
             <img
               src="./images/Photography/photo2.jpg"
               alt="black and white picture of a borther and sister"
-            />
+            >
             <div class="photo-description">
               <p>
                 Two siblings after a long easter relaxing in front of a tree
@@ -169,7 +169,7 @@
             <img
               src="./images/Photography/photo3.jpg"
               alt="picture of a tube slide"
-            />
+            >
             <div class="photo-description">
               <p>
                 An image taken to showcase cirlces and how they bend along a
@@ -184,7 +184,7 @@
             <img
               src="./images/Photography/photo4.jpg"
               alt="Fire fighter silouette"
-            />
+            >
             <div class="photo-description">
               <p>
                 Each year the town has a burning of christmas trees after their
@@ -199,7 +199,7 @@
             <img
               src="./images/Photography/photo5.jpg"
               alt="Woman posing as an Angel"
-            />
+            >
             <div class="photo-description">
               <p>
                 Took a models picture and used photoshop to give her a more
@@ -214,7 +214,7 @@
             <img
               src="./images/Photography/photo6.jpg"
               alt="Cosplay Model dressed as an elf"
-            />
+            >
             <div class="photo-description">
               <p>
                 Another model dressed as an elf coming out of a dark depression
@@ -229,7 +229,7 @@
             <img
               src="./images/Photography/photo7.jpg"
               alt="Devious lady in red"
-            />
+            >
             <div class="photo-description">
               <p>This is an image created for a model friend</p>
             </div>
@@ -238,7 +238,7 @@
         <!-- Photo 8 -->
         <div class="col-12 col-md-6 col-lg-4">
           <div class="photo-item">
-            <img src="./images/Photography/photo8.jpg" alt="Fallen Angel" />
+            <img src="./images/Photography/photo8.jpg" alt="Fallen Angel" >
             <div class="photo-description">
               <p>
                 Woamn are compared to angels. This is one molded by years of
