--- a/advertisement.html
+++ b/advertisement.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="light">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
     <title>Advertisements</title>
     <!-- Bootstrap 5.3.8 CSS -->
     <link
@@ -10,13 +10,13 @@
       rel="stylesheet"
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
+    >
+    <link rel="stylesheet" href="style.css" >
     <!-- Bootstrap Icons for theme switcher -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
+    >
     <script>
       // Prevents flash of unstyled content (FOUC)
       (() => {
@@ -141,7 +141,7 @@
                   src="./images/Advertisements/ad1.jpg"
                   class="img-fluid advertisement-image"
                   alt="Advertisement for Nisan Leaf"
-                />
+                >
               </div>
               <div class="col-md-7 d-flex flex-column">
                 <div class="card-body">
@@ -176,7 +176,7 @@
                   src="./images/Advertisements/ad2.jpg"
                   class="img-fluid advertisement-image"
                   alt="Advertisement NSAC Campaign 2013"
-                />
+                >
               </div>
               <div class="col-md-7 d-flex flex-column">
                 <div class="card-body">
@@ -211,7 +211,7 @@
                   src="./images/Advertisements/ad3.jpg"
                   class="img-fluid advertisement-image"
                   alt="Advertisement Glidden NSAC Campaign 2013"
-                />
+                >
               </div>
               <div class="col-md-7 d-flex flex-column">
                 <div class="card-body">
@@ -242,7 +242,7 @@
                   src="./images/Advertisements/ad4.jpg"
                   class="img-fluid advertisement-image"
                   alt="Advertisement for National Domestic Violence Hotline"
-                />
+                >
               </div>
               <div class="col-md-7 d-flex flex-column">
                 <div class="card-body">
