--- a/contactme.html
+++ b/contactme.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="light">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
     <title>Contact</title>
     <!-- Bootstrap 5.3.8 CSS -->
     <link
@@ -10,13 +10,13 @@
       rel="stylesheet"
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
+    >
+    <link rel="stylesheet" href="style.css" >
     <!-- Bootstrap Icons for theme switcher -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
+    >
     <script>
       // Prevents flash of unstyled content (FOUC)
       (() => {
@@ -139,7 +139,7 @@
               type="hidden"
               name="_next"
               value="http://localhost/success.html"
-            />
+            >
             <div class="row">
               <div class="col-md-6 mb-3">
                 <label for="firstName" class="form-label">First Name</label>
@@ -149,7 +149,7 @@
                   id="firstName"
                   name="firstName"
                   required
-                />
+                >
               </div>
               <div class="col-md-6 mb-3">
                 <label for="lastName" class="form-label">Last Name</label>
@@ -159,7 +159,7 @@
                   id="lastName"
                   name="lastName"
                   required
-                />
+                >
               </div>
             </div>
             <div class="mb-3">
@@ -171,7 +171,7 @@
                 class="form-control"
                 id="companyName"
                 name="companyName"
-              />
+              >
             </div>
             <div class="mb-3">
               <label for="email" class="form-label">Email Address</label>
@@ -182,7 +182,7 @@
                 name="email"
                 placeholder="you@example.com"
                 required
-              />
+              >
             </div>
             <div class="mb-3">
               <label for="phone" class="form-label">Phone Number</label>
@@ -193,7 +193,7 @@
                 name="phone"
                 placeholder="123-456-7890"
                 required
-              />
+              >
             </div>
             <div class="mb-3">
               <label for="projectIdea" class="form-label">Project Idea</label>
