--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="light">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
     <title>RoseDigitalDesign</title>
     <!-- Bootstrap 5.3.8 CSS -->
     <link
@@ -10,12 +10,12 @@
       rel="stylesheet"
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
-    />
+    >
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
-    <link rel="stylesheet" href="style.css" />
+    >
+    <link rel="stylesheet" href="style.css" >
   </head>
   <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg">
@@ -135,9 +135,9 @@
                 src="./images/logos/Carousel.jpg"
                 class="d-block w-100"
                 alt="Logo design showcase"
-              />
+              >
               <div class="carousel-caption d-none d-md-block">
-                <h5>Stunning Logo Designs</h5>
+                <h5 class="caratext2">Stunning Logo Designs</h5>
                 <a href="./logo.html" class="btn btn-primary">View Our Work</a>
               </div>
             </div>
@@ -146,7 +146,7 @@
                 src="./images/Photography/photographycara.jpg"
                 class="d-block w-100"
                 alt="Professional photography examples"
-              />
+              >
               <div class="carousel-caption d-none d-md-block">
                 <h5 class="caratext">Professional Photography</h5>
                 <a href="./photography.html" class="btn btn-primary"
@@ -159,7 +159,7 @@
                 src="./images/Advertisements/advertisementcara.jpg"
                 class="d-block w-100"
                 alt="Advertisement design samples"
-              />
+              >
               <div class="carousel-caption d-none d-md-block">
                 <h5 class="caratext">Impactful Advertisements</h5>
                 <a href="./advertisement.html" class="btn btn-primary"
@@ -197,7 +197,7 @@
               class="profile img-fluid"
               src="./images/pinkbengit.jpg"
               alt="A picture of Benjamin Rose"
-            />
+            >
           </div>
           <div class="col-md-8">
             <p class="lead mt-3 mt-md-0">
@@ -232,7 +232,7 @@
               class="bubble mb-3"
               src="./images/Camera.jpg"
               alt="Camera icon"
-            />
+            >
             <p>
               Every photo tells a story waiting to be unveiled. Through the
               lens, I capture the fleeting moments of life, and in the editing
@@ -247,7 +247,7 @@
               class="bubble mb-3"
               src="./images/design.jpg"
               alt="Design tools icon"
-            />
+            >
             <p>
               A great design is more than just aesthetics; it's the silent
               ambassador of your brand. I specialize in creating memorable logos
@@ -263,7 +263,7 @@
               class="bubble mb-3"
               src="./images/FullStack.jpg"
               alt="Code on a screen icon"
-            />
+            >
             <p>
               From a simple idea to a fully functional application, I architect
               and build digital experiences from the ground up. Mastering both
