--- a/logo.html
+++ b/logo.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="light">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
     <title>Logos</title>
     <!-- Bootstrap 5.3.8 CSS -->
     <link
@@ -10,13 +10,13 @@
       rel="stylesheet"
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
+    >
+    <link rel="stylesheet" href="style.css" >
     <!-- Bootstrap Icons for theme switcher -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
+    >
     <script>
       // Prevents flash of unstyled content (FOUC)
       (() => {
@@ -137,7 +137,7 @@
               src="./images/logos/logo1.jpg"
               class="img-fluid logo-image"
               alt="pantheon of old logo"
-            />
+            >
             <div class="logo-description">
               <p>
                 A gaming community Named "Pantheon of Old" was looking for an
@@ -153,7 +153,7 @@
               src="./images/logos/logo2.jpg"
               class="img-fluid logo-image"
               alt="Logo for Work Care Occupational health"
-            />
+            >
             <div class="logo-description">
               <p>
                 Was tasked with depicting a logo for a rebranding of a doctors
@@ -169,7 +169,7 @@
               src="./images/logos/logo3.jpg"
               class="img-fluid logo-image"
               alt="Telecommunications logo"
-            />
+            >
             <div class="logo-description">
               <p>A logo made for a fictional telecom company</p>
             </div>
@@ -182,7 +182,7 @@
               src="./images/logos/logo4.jpg"
               class="img-fluid logo-image"
               alt="Bad Lungs Record logo"
-            />
+            >
             <div class="logo-description">
               <p>
                 A friends band in florida asked me to create an image that can
@@ -197,7 +197,7 @@
               src="./images/logos/logo5.jpg"
               class="img-fluid logo-image"
               alt="Dyslektic Labs Logo"
-            />
+            >
             <div class="logo-description">
               <p>
                 Dyslektic Labs is a design brand that reached out to see what i
@@ -212,7 +212,7 @@
               src="./images/logos/logo6.jpg"
               class="img-fluid logo-image"
               alt="Benjamin Rose Branding"
-            />
+            >
             <div class="logo-description">
               <p>
                 Something clean modern and professional to use for an Insurance
@@ -227,7 +227,7 @@
               src="./images/logos/logo7.jpg"
               class="img-fluid logo-image"
               alt="Rose Digital Imaging Logo"
-            />
+            >
             <div class="logo-description">
               <p>The design I came up with for Rose Digital Imaging</p>
             </div>
@@ -239,7 +239,7 @@
               src="./images/logos/logo8.jpg"
               class="img-fluid logo-image"
               alt="Saphire Shine Logo"
-            />
+            >
             <div class="logo-description">
               <p>
                 Saphire Shine reached out and asked for a design to represent
