made adjustments based on Farnaz Critique

--- a/photography.html
+++ b/photography.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="light">
   <head>
-    <meta charset="utf-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1" >
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Photography</title>
     <!-- Bootstrap 5.3.8 CSS -->
     <link
@@ -10,13 +10,16 @@
       rel="stylesheet"
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
-    >
-    <link rel="stylesheet" href="style.css" >
+    />
+    <link rel="stylesheet" href="style.css" />
     <!-- Bootstrap Icons for theme switcher -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    >
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
     <script>
       // Prevents flash of unstyled content (FOUC)
       (() => {
@@ -129,7 +132,7 @@
     <main class="container mt-4 flex-shrink-0">
       <h1 class="Title">Photography</h1>
       <p class="text-center lead mb-5">
-        Capturing moments, telling stories. Hover over an image to see more.
+        Capturing moments, telling stories. A little or a lot of photoshop each image tells its own story
       </p>
 
       <div class="row g-4">
@@ -139,13 +142,7 @@
             <img
               src="./images/Photography/photo1.jpg"
               alt="Picture of boy Black and white"
-            >
-            <div class="photo-description">
-              <p>
-                Picture of a young boy staring off into the void thinking the
-                future.
-              </p>
-            </div>
+            />
           </div>
         </div>
         <!-- Photo 2 -->
@@ -154,13 +151,7 @@
             <img
               src="./images/Photography/photo2.jpg"
               alt="black and white picture of a borther and sister"
-            >
-            <div class="photo-description">
-              <p>
-                Two siblings after a long easter relaxing in front of a tree
-                planted at their birth
-              </p>
-            </div>
+            />
           </div>
         </div>
         <!-- Photo 3 -->
@@ -169,13 +160,7 @@
             <img
               src="./images/Photography/photo3.jpg"
               alt="picture of a tube slide"
-            >
-            <div class="photo-description">
-              <p>
-                An image taken to showcase cirlces and how they bend along a
-                path
-              </p>
-            </div>
+            />
           </div>
         </div>
         <!-- Photo 4 -->
@@ -184,13 +169,7 @@
             <img
               src="./images/Photography/photo4.jpg"
               alt="Fire fighter silouette"
-            >
-            <div class="photo-description">
-              <p>
-                Each year the town has a burning of christmas trees after their
-                use caught a firefighter silouetted by the inferno behind him
-              </p>
-            </div>
+            />
           </div>
         </div>
         <!-- Photo 5 -->
@@ -199,13 +178,7 @@
             <img
               src="./images/Photography/photo5.jpg"
               alt="Woman posing as an Angel"
-            >
-            <div class="photo-description">
-              <p>
-                Took a models picture and used photoshop to give her a more
-                angelic Vibe
-              </p>
-            </div>
+            />
           </div>
         </div>
         <!-- Photo 6 -->
@@ -214,13 +187,7 @@
             <img
               src="./images/Photography/photo6.jpg"
               alt="Cosplay Model dressed as an elf"
-            >
-            <div class="photo-description">
-              <p>
-                Another model dressed as an elf coming out of a dark depression
-                to the light
-              </p>
-            </div>
+            />
           </div>
         </div>
         <!-- Photo 7 -->
@@ -229,22 +196,13 @@
             <img
               src="./images/Photography/photo7.jpg"
               alt="Devious lady in red"
-            >
-            <div class="photo-description">
-              <p>This is an image created for a model friend</p>
-            </div>
+            />
           </div>
         </div>
         <!-- Photo 8 -->
         <div class="col-12 col-md-6 col-lg-4">
           <div class="photo-item">
-            <img src="./images/Photography/photo8.jpg" alt="Fallen Angel" >
-            <div class="photo-description">
-              <p>
-                Woamn are compared to angels. This is one molded by years of
-                abouse and neglect
-              </p>
-            </div>
+            <img src="./images/Photography/photo8.jpg" alt="Fallen Angel" />
           </div>
         </div>
       </div>
@@ -278,10 +236,11 @@
     </footer>
     <div id="footer-placeholder"></div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" 
-    crossorigin="anonymous">
-    </script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
     <script src="./main.js"></script>
   </body>
 </html>
