--- a/advertisement.html
+++ b/advertisement.html
@@ -17,6 +17,9 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
     <script>
       // Prevents flash of unstyled content (FOUC)
       (() => {
@@ -183,9 +186,7 @@
                   <h5 class="card-title">Glidden NSAC Campaign</h5>
                   <p class="card-text">
                     This campaign focused on building brand awareness through a
-                    visually striking and memorable design. It was set up as a
-                    magazine add where you would peal the tab and remove the
-                    paint can lid reveal the color code and inspiration.
+                    visually striking and memorable design fit as a magazine add. peal the lid and reveal a surprise. 
                   </p>
                   <div class="text-center w-100 mt-auto">
                     <a
