--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     >
     <link rel="stylesheet" href="style.css" >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
   </head>
   <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg">
@@ -188,7 +191,6 @@
           </button>
         </div>
       </div>
-
       <div class="my-5">
         <h2 class="Title">A Little About Us</h2>
         <div class="row align-items-center mt-4">
